3822B1FI3/8_integral_kokkos/sozonov_ilya/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:29:58: error: no member named 'vector_length' in 'Kokkos::Impl::SYCLTeamMember'
   29 |             team.league_rank() * team.team_size() * team.vector_length();
      |                                                     ~~~~ ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:33:61: error: no member named 'vector_length' in 'Kokkos::Impl::SYCLTeamMember'
   33 |                                     team.team_size() * team.vector_length()),
      |                                                        ~~~~ ^
In file included from /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:1:
In file included from /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.h:4:
In file included from /home/crazyproger/kokkos/build/install/include/Kokkos_Core.hpp:45:
In file included from /home/crazyproger/kokkos/build/install/include/KokkosCore_Config_DeclareBackend.hpp:22:
In file included from /home/crazyproger/kokkos/build/install/include/decl/Kokkos_Declare_OPENMP.hpp:21:
In file included from /home/crazyproger/kokkos/build/install/include/OpenMP/Kokkos_OpenMP.hpp:32:
In file included from /home/crazyproger/kokkos/build/install/include/Kokkos_Parallel.hpp:34:
In file included from /home/crazyproger/kokkos/build/install/include/impl/Kokkos_Tools_Generic.hpp:21:
/home/crazyproger/kokkos/build/install/include/impl/Kokkos_FunctorAnalysis.hpp:611:42: error: no viable overloaded '+='
  611 |       for (int i = 0; i < n; ++i) dst[i] += src[i];
      |                                   ~~~~~~ ^  ~~~~~~
/home/crazyproger/kokkos/build/install/include/impl/Kokkos_FunctorAnalysis.hpp:934:21: note: in instantiation of member function 'Kokkos::Impl::FunctorAnalysis<Kokkos::Impl::FunctorPatternInterface::REDUCE, Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::DeduceJoinNoTag<>::join' requested here
  934 |       DeduceJoin<>::join(&m_functor, dst, src);
      |                     ^
/home/crazyproger/kokkos/build/install/include/SYCL/Kokkos_SYCL_ParallelReduce_Team.hpp:241:33: note: in instantiation of member function 'Kokkos::Impl::FunctorAnalysis<Kokkos::Impl::FunctorPatternInterface::REDUCE, Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::Reducer::join' requested here
  241 |                         reducer.join(&local_mem[local_id * value_count],
      |                                 ^
/home/crazyproger/kokkos/build/install/include/SYCL/Kokkos_SYCL_ParallelReduce_Team.hpp:427:9: note: in instantiation of function template specialization 'Kokkos::Impl::ParallelReduce<Kokkos::Impl::CombinedFunctorReducer<(lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), Kokkos::Impl::FunctorAnalysis<Kokkos::Impl::FunctorPatternInterface::REDUCE, Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::Reducer>, Kokkos::TeamPolicy<Kokkos::SYCL>, Kokkos::SYCL>::sycl_direct_launch<Kokkos::Impl::SYCLFunctionWrapper<Kokkos::Impl::CombinedFunctorReducer<(lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), Kokkos::Impl::FunctorAnalysis<Kokkos::Impl::FunctorPatternInterface::REDUCE, Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::Reducer>, Kokkos::Impl::SYCLInternal::USMObjectMem<sycl::usm::alloc::host>>>' requested here
  427 |         sycl_direct_launch(global_scratch_ptr, functor_reducer_wrapper,
      |         ^
/home/crazyproger/kokkos/build/install/include/Kokkos_Parallel_Reduce.hpp:1543:13: note: in instantiation of member function 'Kokkos::Impl::ParallelReduce<Kokkos::Impl::CombinedFunctorReducer<(lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), Kokkos::Impl::FunctorAnalysis<Kokkos::Impl::FunctorPatternInterface::REDUCE, Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::Reducer>, Kokkos::TeamPolicy<Kokkos::SYCL>, Kokkos::SYCL>::execute' requested here
 1543 |     closure.execute();
      |             ^
/home/crazyproger/kokkos/build/install/include/Kokkos_Parallel_Reduce.hpp:1559:5: note: in instantiation of member function 'Kokkos::Impl::ParallelReduceAdaptor<Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::execute_impl' requested here
 1559 |     execute_impl(label, policy, functor, return_value);
      |     ^
/home/crazyproger/kokkos/build/install/include/Kokkos_Parallel_Reduce.hpp:1691:69: note: in instantiation of function template specialization 'Kokkos::Impl::ParallelReduceAdaptor<Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>::execute<SumPair>' requested here
 1691 |   Impl::ParallelReduceAdaptor<PolicyType, FunctorType, ReturnType>::execute(
      |                                                                     ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:21:11: note: in instantiation of function template specialization 'Kokkos::parallel_reduce<Kokkos::TeamPolicy<Kokkos::SYCL>, (lambda at /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:24:7), SumPair>' requested here
   21 |   Kokkos::parallel_reduce(
      |           ^
In file included from /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.cpp:1:
In file included from /home/crazyproger/sandbox/oneapi-2026/3822B1FI3/8_integral_kokkos/sozonov_ilya/integral_kokkos.h:4:
In file included from /home/crazyproger/kokkos/build/install/include/Kokkos_Core.hpp:45:
In file included from /home/crazyproger/kokkos/build/install/include/KokkosCore_Config_DeclareBackend.hpp:22:
In file included from /home/crazyproger/kokkos/build/install/include/decl/Kokkos_Declare_OPENMP.hpp:21:
In file included from /home/crazyproger/kokkos/build/install/include/OpenMP/Kokkos_OpenMP.hpp:32:
In file included from /home/crazyproger/kokkos/build/install/include/Kokkos_Parallel.hpp:34:
In file included from /home/crazyproger/kokkos/build/install/include/impl/Kokkos_Tools_Generic.hpp:21:
/home/crazyproger/kokkos/build/install/include/impl/Kokkos_FunctorAnalysis.hpp:934:21: error: SYCL kernel cannot call an undefined function without SYCL_EXTERNAL attribute
  934 |       DeduceJoin<>::join(&m_functor, dst, src);
      |                     ^
/home/crazyproger/kokkos/build/install/include/impl/Kokkos_FunctorAnalysis.hpp:608:40: note: 'join' declared here
  608 |     KOKKOS_INLINE_FUNCTION static void join(F const* const f, ValueType* dst,
      |                                        ^
/home/crazyproger/kokkos/build/install/include/impl/Kokkos_FunctorAnalysis.hpp:933:10: note: called by 'join'
  933 |     void join(ValueType* dst, ValueType const* src) const noexcept {
      |          ^
4 errors generated.
